@startuml

'note: Cell indicates any tuple with length between 1 and 3

enum MapContent {
    FREE,
    OBSTACLE,
    SWAMP,
    WATER,
}

class MapScheme {
    - width : int
    - height : int
    - obstacles : list[Cell]
    - free_positions : set[Cell]
    'other sets for water, swamps and other types of content

    + MapScheme(matrix[cell])
    + width() : int
    + height() : int
    + obstacles() : set
    + free_positions() : set
}

class Scenario {
    - map_scheme : MapScheme
    - agents_start_positions: set[Cell]
    - objectives_positions: set[Cell]

    + Scenario(map_scheme : MapScheme, agents_start_positions: set[Cell], objectives_positions: set[Cell])
    + Scenario(map_scheme : MapScheme, agent_list: set[Agent]
    + agents() : set[Agent]
    + map_scheme() : MapScheme
    + objectives_positions() : set[Cell]
    + agents_start_positions() : set[Cell]
    + get_agent_by_id(id : int) : Agent
    + is_valid() : bool
}

class Agent {
    - id : int
    - start_position: Cell
    - objective_position: Cell

    + Agent(id: int, start_position: Cell, objectives_position: Cell)
    + id() : int
    + start_position() : int
    + objective_position() : int
}

class Plan {
    - scenario : Scenario
    - agent_plans : dict[Agent, list[Action]]
    - is_solved : bool
    - solver_name : str
    + solver_name() : str
    + scenario() : Scenario
    + agent_plans() : dict[Agent, list[Action]]
    + get_agent_plan_by_id(id : int) : list[Action]
    + is_solved() : bool
    + get_actions() : list[Action]
}

class Action {
    - timestep : int
    - subject : Agent
    - type : ActionType
    - start_position : Cell
    - end_position : Cell

    + timestep() : int
    + subject() : Agent
    + type() : ActionType
    + start_position() : Cell
    + end_position() : Cell
}

enum ActionType {
    MOVE,
    WAIT
}

' For the future
MapScheme --o MapContent : contains
Scenario --o MapScheme
Scenario --o Agent
Plan --o Scenario
Plan --* Action
Action <-- ActionType

@enduml